added reportitem to API
