# dfirtrack_api/serializers/dfirtrack_main.py
@@ -307,6 +307,46 @@ class RecommendationSerializer(serializers.ModelSerializer):
             'recommendation_name',
         )
 
+class ReportitemSerializer(serializers.ModelSerializer):
+    """ create serializer for model instance """
+
+    # redefine representation
+    def to_representation(self, instance):
+
+        # get serializers of foreignkey relationsships
+        self.fields['case'] =  dfirtrack_main_fk.CaseFkSerializer(many=False, read_only=True)
+        self.fields['headline'] =  dfirtrack_main_fk.HeadlineFkSerializer(many=False, read_only=True)
+        self.fields['notestatus'] =  dfirtrack_main_fk.NotestatusFkSerializer(many=False, read_only=True)
+        self.fields['system'] =  dfirtrack_main_fk.SystemFkSerializer(many=False, read_only=True)
+        self.fields['tag'] =  dfirtrack_main_fk.TagFkSerializer(many=True, read_only=True)
+
+        # get existing to_representation
+        representation = super(ReportitemSerializer, self).to_representation(instance)
+
+        # change mandatory time strings
+        representation['reportitem_create_time'] = instance.reportitem_create_time.strftime('%Y-%m-%dT%H:%M')
+        representation['reportitem_modify_time'] = instance.reportitem_modify_time.strftime('%Y-%m-%dT%H:%M')
+
+        return representation
+
+    class Meta:
+        model = dfirtrack_main_models.Reportitem
+        # attributes made available for api
+        fields = (
+            'reportitem_id',
+            'case',
+            'headline',
+            'notestatus',
+            'system',
+            'tag',
+            'reportitem_subheadline',
+            'reportitem_note',
+            'reportitem_create_time',
+            'reportitem_created_by_user_id',
+            'reportitem_modify_time',
+            'reportitem_modified_by_user_id',
+        )
+
 class ServiceproviderSerializer(serializers.ModelSerializer):
     """ create serializer for model instance """
 
